--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,85 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.main {
+  background-image: url("./assets/images/background.jpg");
+  min-width: 100vw;
+  min-height: 100vh;
+  display: flex;
+
+  align-items: center;
+  justify-content: center;
+
+  overflow: hidden;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.envelope {
+  height: 572px;
+  position: relative;
+  transition: box-shadow 0.3s;
+  box-shadow: -10px 10px 20.8px 3px rgba(0, 0, 0, 0.65);
+  cursor: pointer;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+.envelope:hover {
+  box-shadow: 0px 0px 111.5px 42px rgb(255, 255, 255);
+  transition: box-shadow 0.3s;
+}
+
+.envelopeImg {
+  width: 800px;
+  height: 572px;
+}
+
+.stamp {
+  width: 153px;
+  height: 143px;
+  position: absolute;
+  left: calc(50% - 153px/2);
+  top: calc(50% - 143px/2);
+  filter: drop-shadow(-6px 6px 13.3px rgba(0, 0, 0, 0.25));
+}
+
+.stmapHidden {
+  left: 2000px;
+  top: 1000px;
+  opacity: 0;
+  transition: left 2s, top 2s, opacity 0.5s ease-out;
+}
+
+@media screen and (max-width: 1020px) {
+  .envelope {
+    height: 340px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .envelopeImg {
+    width: 475px;
+    height: 340px;
   }
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  .stamp {
+    width: 103px;
+    height: 96px;
+    position: absolute;
+    left: calc(50% - 103px/2);
+    top: calc(50% - 96px/2);
   }
+
 }
 
-.card {
-  padding: 2em;
-}
+@media screen and (max-width: 560px) {
+  .envelope {
+    height: 214px;
+  }
 
-.read-the-docs {
-  color: #888;
+  .envelopeImg {
+    width: 316px;
+    height: 214px;
+  }
+
+  .stamp {
+    width: 71px;
+    height: 66px;
+    position: absolute;
+    left: calc(50% - 71px/2);
+    top: calc(50% - 66px/2);
+  }
+
 }
