--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,16 @@
   min-height: 100vh;
   display: flex;
 
-  align-items: center;
   justify-content: center;
 
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
+html::-webkit-scrollbar { width: 0; }
+
 .envelope {
+  align-self: center;
   height: 572px;
   position: relative;
   transition: box-shadow 0.3s;
@@ -42,6 +45,22 @@
   top: 1000px;
   opacity: 0;
   transition: left 2s, top 2s, opacity 0.5s ease-out;
+}
+
+@font-face {
+  font-family: 'IceKingdomFrozenCyrillic';
+  src: url('./assets/Fonts/icekingdomfrozencyrillic_bold.ttf');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'RingBear';
+  src: url('./assets/Fonts/ringbearmedium.ttf');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
 @media screen and (max-width: 1020px) {
