--- a/src/components/Envelope/Envelope.css
+++ b/src/components/Envelope/Envelope.css
@@ -23,7 +23,7 @@
 }
 
 .envelopeNotOpen:hover {
-    box-shadow: 0px 0px 111.5px 42px rgb(255, 255, 255);
+    box-shadow: 0 0 111.5px 42px rgb(255, 255, 255);
     transition: box-shadow 0.3s;
 }
 
@@ -92,6 +92,10 @@
         height: 541px;
     }
 
+    .envelopeRotating {
+        right: 300px;
+    }
+
     .stamp {
         width: 103px;
         height: 96px;
@@ -119,9 +123,7 @@
     }
 
     .envelopeRotating {
-        transform: rotate(-15deg);
         right: 140px;
-        bottom: 60px;
     }
 
     .stamp {
