--- a/src/components/Envelope/Envelope.module.css
+++ b/src/components/Envelope/Envelope.module.css
@@ -11,19 +11,19 @@
 }
 
 .envelope {
-    position: relative;
+    position: absolute;
     height: 572px;
     width: 800px;
+    margin-top: 250px;
 }
 
 .envelopeNotOpen {
-    height: 572px;
     transition: box-shadow 0.3s;
     cursor: pointer;
 }
 
 .envelopeNotOpen:hover {
-    box-shadow: 0 0 111.5px 42px rgb(255, 255, 255);
+    box-shadow: 0px 0px 111.5px 42px rgb(255, 255, 255);
     transition: box-shadow 0.3s;
 }
 
@@ -106,7 +106,7 @@
 
 }
 
-@media screen and (max-width: 560px) {
+@media screen and (max-width: 760px) {
     .envelope {
         height: 214px;
         width: 316px;
@@ -123,7 +123,9 @@
     }
 
     .envelopeRotating {
+        transform: rotate(-15deg);
         right: 140px;
+        bottom: 60px;
     }
 
     .stamp {
@@ -136,10 +138,13 @@
 
 }
 
-
 .stmapHidden {
-    left: 2000px;
-    top: 1000px;
+    left: 1000px;
+    top: 500px;
     opacity: 0;
     transition: left 2s, top 2s, opacity 0.5s ease-out;
+}
+
+.background{
+    height: calc(250px * 2 + 520px);
 }
