--- a/src/components/Letter/Letter.module.css
+++ b/src/components/Letter/Letter.module.css
@@ -1,8 +1,8 @@
 .letter {
     display: flex;
-    background-color: #D3C5BA;
+    background-color: #d3c5ba;
     padding: 40px 80px;
-    box-shadow: -10px 10px 20.8px 4px #00000078, 0px 0px 250px 138px #6A5F596E inset;
+    box-shadow: -10px 10px 20.8px 4px #00000078, 0px 0px 250px 138px #6a5f596e inset;
     width: 800px;
     margin-top: 60px;
     margin-bottom: 120px;
@@ -15,13 +15,26 @@
     font-size: 24px;
     line-height: 30px;
     position: relative;
+    overflow: hidden;
+    animation: show 2s 1;
 }
 
-.letter div{
+@keyframes show {
+    0% {
+        opacity: 0;
+        margin-top: -1000px;
+    }
+    100% {
+        opacity: 1;
+        margin-top: 60px;
+    }
+}
+
+.letter div {
     z-index: 2;
 }
 
-.texture{
+.texture {
     position: absolute;
     background-image: url(../../assets/images/letterBackground.png);
     top: 0;
@@ -63,45 +76,416 @@
     letter-spacing: 4%;
 }
 
-.mainText{
+.mainText {
     display: flex;
     flex-direction: column;
     gap: 40px;
 }
 
-.drago{
+.drago {
     display: flex;
     flex-direction: column;
     gap: 45px;
     text-align: end;
+    align-items: flex-end;
 }
 
-.textContent{
+.drago .first {
+    max-width: 460px;
+}
+.drago .second {
+    max-width: 540px;
+}
+.textContent {
     display: flex;
     flex-direction: column;
     gap: 100px;
 }
 
-.dressCode .title{
+.dressCode .title {
     text-align: center;
 }
-.dressCode{
+.dressCode {
     display: flex;
     flex-direction: column;
     gap: 12px;
 }
 
-.signature{
+.signature {
     text-align: end;
 }
 
-.bottomBlock{
+.bottomBlock {
     display: flex;
     flex-direction: column;
     gap: 40px;
 }
 
-.bottles{
+.bottles {
     display: flex;
     justify-content: space-between;
+}
+
+.bottomPattern {
+    display: flex;
+    justify-content: space-between;
+}
+
+.bottomPattern svg {
+    width: 204px;
+    height: 80px;
+}
+
+.revert {
+    transform: scale(-1, 1);
+}
+
+.dragoImage {
+    position: absolute;
+    top: 660px;
+    left: -84px;
+    height: 536px;
+}
+
+.fire {
+    position: absolute;
+    transform: rotate(37deg);
+    opacity: 0;
+    z-index: 5;
+    animation: fire 2s 1;
+    animation-timing-function: linear;
+}
+
+.yellow{
+    width: 73px;
+}
+.green{
+    width: 54px;
+}
+.blue{
+    width: 84px;
+}
+.purple{
+    width: 57px;
+}
+.pink{
+    width: 97px;
+}
+
+@keyframes fire {
+    from {
+        opacity: 0;
+        height: 0;
+        left: 270px;
+        top: 880px;
+    }
+    60% {
+        opacity: 1;
+        height: 50px;
+    }
+    to {
+        opacity: 0.4;
+        height: 70px;
+        left: 580px;
+        top: 1070px;
+    }
+}
+
+.fire2 {
+    position: absolute;
+    transform: rotate(17deg);
+    opacity: 0;
+    z-index: 5;
+    animation: fire2 2s 1;
+    animation-timing-function: linear;
+}
+
+@keyframes fire2 {
+    from {
+        opacity: 0;
+        height: 0;
+        left: 270px;
+        top: 870px;
+    }
+    60% {
+        opacity: 1;
+        height: 50px;
+    }
+    to {
+        opacity: 0.4;
+        height: 70px;
+        left: 640px;
+        top: 940px;
+    }
+}
+
+.fire3 {
+    position: absolute;
+    transform: rotate(57deg);
+    opacity: 0;
+    z-index: 5;
+    animation: fire3 2s 1;
+    animation-timing-function: linear;
+}
+
+@keyframes fire3 {
+    from {
+        opacity: 0;
+        height: 0;
+        left: 280px;
+        top: 880px;
+    }
+    60% {
+        opacity: 1;
+        height: 50px;
+    }
+    to {
+        opacity: 0.4;
+        height: 70px;
+        left: 390px;
+        top: 1170px;
+    }
+}
+
+@media screen and (max-width: 1020px) {
+    .letter {
+        width: 680px;
+        font-size: 20px;
+        gap: 20px;
+        line-height: 26px;
+    }
+    .headerText {
+        font-size: 36px;
+    }
+
+    .dragoImage {
+        height: 411px;
+        top: 540px;
+        left: -44px;
+    }
+
+    .textContent{
+        gap: 40px
+    }
+    .bottomBlock {
+        gap: 20px;
+    }
+    .mainText {
+        gap: 20px;
+    }
+    .drago .first {
+        max-width: 384px;
+    }
+    .drago .second {
+        max-width: 520px;
+    }
+
+    .bottomPattern svg {
+        width: 160px;
+        height: 60px;
+        margin-top: 24px;
+    }
+
+    .bottles .yellow{
+        order: 1;
+    }
+
+    .bottles .green{
+        order: 4;
+    }
+
+    .bottles .blue{
+        order: 5;
+    }
+
+    .bottles .purple{
+        order: 2;
+    }
+
+    .bottles .pink{
+        order: 3;
+    }
+
+    @keyframes fire {
+        from {
+            opacity: 0;
+            height: 0;
+            left: 215px;
+            top: 685px;
+        }
+        60% {
+            opacity: 1;
+            height: 40px;
+        }
+        to {
+            opacity: 0.4;
+            height: 60px;
+            left: 520px;
+            top: 970px;
+        }
+    }
+    
+    @keyframes fire2 {
+        from {
+            opacity: 0;
+            height: 0;
+            left: 217px;
+            top: 715px;
+        }
+        60% {
+            opacity: 1;
+            height: 40px;
+        }
+        to {
+            opacity: 0.4;
+            height: 60px;
+            left: 520px;
+            top: 750px;
+        }
+    }
+
+    @keyframes fire3 {
+        from {
+            opacity: 0;
+            height: 0;
+            left: 235px;
+            top: 705px;
+        }
+        60% {
+            opacity: 1;
+            height: 40px;
+        }
+        to {
+            opacity: 0.4;
+            height: 60px;
+            left: 350px;
+            top: 1000px;
+        }
+    }
+}
+
+@media screen and (max-width: 760px) {
+    .letter {
+        width: 360px;
+        font-size: 13px;
+        gap: 16px;
+        line-height: 20px;
+        padding: 24px 30px;
+    }
+    .headerText {
+        font-size: 24px;
+    }
+
+    .dragoImage {
+        height: 260px;
+        top: 410px;
+        left: -62px;
+    }
+
+    .text{
+        gap: 16px;
+    }
+
+    .textContent{
+        gap: 32px
+    }
+    .bottomBlock {
+        gap: 16px;
+    }
+    .mainText {
+        gap: 16px;
+    }
+    .drago .first {
+        max-width: 384px;
+    }
+    .drago .second {
+        max-width: 520px;
+    }
+
+    .bottomPattern svg {
+        width: 128px;
+        height: 48px;
+        margin-top: 24px;
+    }
+
+    .bottles{
+        justify-content: space-around;
+    }
+
+    .bottles img{
+        object-fit: contain;
+    }
+
+    .yellow{
+        height: 72px;
+    }
+    .green{
+        height: 72px;
+    }
+    .blue{
+        height: 72px;
+    }
+    .purple{
+        height: 72px;
+    }
+    .pink{
+        height: 72px;
+    }
+
+    @keyframes fire {
+        from {
+            opacity: 0;
+            height: 0;
+            left: 90px;
+            top: 500px;
+        }
+        50% {
+            opacity: 1;
+            height: 20px;
+        }
+        to {
+            opacity: 0.4;
+            height: 40px;
+            left: 200px;
+            top: 590px;
+        }
+    }
+    
+    @keyframes fire2 {
+        from {
+            opacity: 0;
+            height: 0;
+            left: 85px;
+            top: 515px;
+        }
+        50% {
+            opacity: 1;
+            height: 20px;
+        }
+        to {
+            opacity: 0.4;
+            height: 40px;
+            left: 250px;
+            top: 545px;
+        }
+    }
+
+    @keyframes fire3 {
+        from {
+            opacity: 0;
+            height: 0;
+            left: 100px;
+            top: 495px;
+        }
+        50% {
+            opacity: 1;
+            height: 20px;
+        }
+        to {
+            opacity: 0.4;
+            height: 40px;
+            left: 160px;
+            top: 650px;
+        }
+    }
 }
