--- a/src/components/Letter/Letter.module.css
+++ b/src/components/Letter/Letter.module.css
@@ -44,7 +44,20 @@
     mix-blend-mode: soft-light;
     z-index: 1 !important;
 }
-
+a{
+    text-transform: uppercase;
+    text-decoration: none;
+    -webkit-text-stroke: 1px #00000087;
+    color: transparent;
+	-webkit-background-clip: text;
+	background-clip: text;
+	background-image: linear-gradient(90deg, #FCE2B0 22.34%, #04D6A4 35.87%, #BCD9FA 49.92%, #C7BED8 63.71%, #F9BFD1 77.5%);
+}
+a:hover{
+    color: transparent;
+    -webkit-text-stroke: 2px #00000087;
+    background-image: linear-gradient(#BCD9FA, #BCD9FA);
+}
 .headerPattern {
     align-self: center;
     width: 100%;
@@ -61,6 +74,11 @@
 .signature {
     font-family: "IceKingdomFrozenCyrillic";
     font-weight: bold;
+}
+
+.big{
+    font-size: 32px !important;
+    line-height: 100% !important;
 }
 
 .headerText,
@@ -254,8 +272,14 @@
         gap: 20px;
         line-height: 26px;
     }
+
     .headerText {
         font-size: 36px;
+    }
+
+    .big{
+        font-size: 28px;
+        line-height: 100%;
     }
 
     .dragoImage {
@@ -374,6 +398,11 @@
     }
     .headerText {
         font-size: 24px;
+    }
+
+    .big{
+        font-size: 16px;
+        line-height: 100%;
     }
 
     .dragoImage {
